experiments/wmma_nightly_check/exp3e_wmma_free.log
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:80:31: error: invalid call to 'check': value passed to 'hc' cannot be converted from 'UnsafePointer[BFloat16, MutUntrackedOrigin]' to 'UnsafePointer[BFloat16, MutAnyOrigin]'
        check[1](hc.unsafe_ptr(), host_a1, host_b, "decode M=1  gemv_gpu")
        ~~~~~    ~~~~~~~~~~~~~^~
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:29:5: note: function declared here
def check[M: Int](
    ^
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:80:31: note: .origin of the first value is 'MutUntrackedOrigin' but the second value is 'MutAnyOrigin'
        check[1](hc.unsafe_ptr(), host_a1, host_b, "decode M=1  gemv_gpu")
                              ^
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:124:31: error: invalid call to 'check': value passed to 'hc' cannot be converted from 'UnsafePointer[BFloat16, MutUntrackedOrigin]' to 'UnsafePointer[BFloat16, MutAnyOrigin]'
        check[M](hc.unsafe_ptr(), host_a4, host_b, "prefill M=4 naive")
        ~~~~~    ~~~~~~~~~~~~~^~
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:29:5: note: function declared here
def check[M: Int](
    ^
/home/nikocloud/projects/hephaestus/experiments/exp3e_wmma_free_paths.mojo:124:31: note: .origin of the first value is 'MutUntrackedOrigin' but the second value is 'MutAnyOrigin'
        check[M](hc.unsafe_ptr(), host_a4, host_b, "prefill M=4 naive")
                              ^
/home/nikocloud/projects/hephaestus-wmma-nightly/.pixi/envs/default/bin/mojo: error: failed to parse the provided Mojo source module
